binrw/tests/ui/conflicting_keyword_read_mode.stderr
error: conflicting read mode keyword
 --> $DIR/conflicting_keyword_read_mode.rs:6:19
  |
6 |     #[br(calc(1), default, ignore, parse_with = u8)]
  |                   ^^^^^^^

error: conflicting read mode keyword
 --> $DIR/conflicting_keyword_read_mode.rs:6:28
  |
6 |     #[br(calc(1), default, ignore, parse_with = u8)]
  |                            ^^^^^^

error: conflicting read mode keyword
 --> $DIR/conflicting_keyword_read_mode.rs:6:36
  |
6 |     #[br(calc(1), default, ignore, parse_with = u8)]
  |                                    ^^^^^^^^^^
